--- a/docs/stories/1.1.set-up-fastapi-backend-structure-with-health-check.md
+++ b/docs/stories/1.1.set-up-fastapi-backend-structure-with-health-check.md
@@ -1,7 +1,7 @@
 # Story 1.1: Set Up FastAPI Backend Structure with Health Check
 
 ## Status
-Ready for Done
+Done
 
 ## Story
 
@@ -153,7 +153,7 @@ From Story 1.0 (Upgrade Frontend and Set Up Testing Infrastructure):
 
 ### Data Models
 
-No data models required for this story. Database setup and models will be implemented in Story 1.2.
+No data models required for this story. Database setup and models will be implemented in Story 1.3.
 
 [Source: architecture/data-models.md]
 
